[package]
name = "pdf_to_image_rs"
version = "1.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
log = "0.4.21"
env_logger  = "0.11.3"
pdf = "0.9.0"
image = "0.25.1"
chrono = "0.4.38"
futures = "0.3.30"
rawloader = "0.37.1"
num_cpus = "1.16.0"
threadpool = "1.8.1"
sysinfo = "0.31.2"
regex = "1.10.4"

[dev-dependencies]
test-log = "0.2.16"
