[package]
name = "pdf_to_image_rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.21"
env_logger  = "0.11.3"
pdf = "0.9.0"
image = "0.25.5"
chrono = "0.4.38"
futures = "0.3.31"
rawloader = "0.37.1"
num_cpus = "1.16.0"
threadpool = "1.8.1"
sysinfo = "0.32.0"
regex = "1.11.1"
file_method  = { git = "https://github.com/abskihDDloh/file_method.git", rev = "0a81bd98941400a08b75e1baa324d0fa4ef43db7"}

[dev-dependencies]
test-log = "0.2.16"
